<resources>
    <string name="label_about_us_nav_drawer">About Us</string>
    <string name="subroom_dropdown_text_fragment_itemdetail">Change subroom</string>
    <string name="timeout_error">Timeout occurued</string>
    <string name="img_desc_zebra_fragment_about">Zebra logo</string>
    <string name="logout_text_fragment_logout">Do you want to log out?</string>
    <string name="msg_one_left_finishroom_fragment_mergeditems">Do you want to finish this room and notify the server? One item will be marked as missing!</string>
    <string name="msg_X_left_finishroom_fragment_mergeditems">" Do you want to finish this room and notify the server? %1$d items will be marked as missing!"</string>
    <string name="msg_0_left_finishroom_fragment_mergeditems">Do you want to finish this room and notify the server?</string>
    <string name="msg_never_ending_finishroom_fragment_mergeditems">Do you want to finish this room and notify the server?</string>
    <string name="msg_onback_fragment_mergeditems">Do you really want to discard the current changes for this room and return to the previous screen?</string>
    <string name="message_handle_finish_fragment_rooms">Do you want to end the current inventory? Amount of validated rooms: %1$d</string>
    <string name="found_titel_popup">We found the item in the Database!</string>
    <string name="desc_fragment_stocktaking">Choose the database-view and inventory that you want to use! You can also use the button with the question mark to get some more information about an item (independent of any inventory).</string>
    <string name="reliable_desc_fragment_home_screen">reliable icon</string>
    <string name="reliable_fragment_home_screen">Reliable</string>
    <string name="msg_barcode_formats_key_preferences">Choose supported barcode formats</string>
    <string name="sponsor_fragment_about">Special thanks goes to our sponsor Zebra!</string>
    <string name="invalid_scan_error">Unexpected Scan!</string>
    <string name="not_found_titel_popup">Unknown Item!</string>
    <string name="satisfying_desc_fragment_home_screen">satisfying icon</string>
    <string name="satisfying_fragment_home_screen">Satisfying</string>
    <string name="login_successful_fragment_login">Token generated successfully!</string>
    <string name="title_text_filter_mode_preferences">Text recognition mode</string>
    <string name="dialog_title_text_filter_mode_preferences">Choose Text recognition mode</string>
    <string name="title_switch_enforce_zebra_preferences">Prioritize PopUp-Functionality of the Zebra-Scan (Keyboard input via Zebra-Scan might be negelected)</string>
    <string name="error_missing_inventory_fragment_stocktaking">You must first create an inventory on the server!</string>
    <string name="error_serializer">You must fcreate an inventory on the server and choose a database-view!</string>
    <string name="error_stocktaking">You must first create an inventory!</string>
    <string name="expand_failure_fragment_mergeditems">Please be more gentle with the subrooms! Unfortunately you must redo this room, please return to the previous screen!</string>
    <string name="msg_duplicate_fragment_mergeditems">You already validated this item, do you want to validate it one more time?</string>
    <string name="logout_text_desc_fragment_logout">"You can either logout locally (by deleting your password token on this device only) or also delete it on the server. For the second option network connectivity is required. "</string>
    <string name="no_rooms_left_fragment_rooms">You have successfully finished the inventory for all rooms! You can go ahead and close the inventory on the server (or notify your admin to do so for you).</string>
    <string name="action_settings">Settings</string>
    <string name="json_error">Server is using unsupported JSON-format!</string>
    <string name="error_missing_serializer_fragment_stocktaking">This server doesn\'t support inventories! Contact an admin.</string>
    <string name="title_server_ip_preferences">Server Address</string>
    <string name="imgdesc_logo_fragment_about">htl rennweg logo</string>
    <string name="fast_desc_fragment_home_screen">fast icon</string>
    <string name="fast_fragment_home_screen">Fast</string>
    <string name="scan_failed_scan_fragments">Scan failed!</string>
    <string name="title_onback_fragment_mergeditems">Room entries</string>
    <string name="confirm_room_fragment_rooms">Confirm room selection</string>
    <string name="placeholder_activity_scan_text">Placeholder</string>
    <string name="password_fragment_login">Password</string>
    <string name="button_itempopup">OK</string>
    <string name="authfailure_error">Your credentials are either invalid or don\'t give you enough permission. Please try to login again! Alternatively, try another account.</string>
    <string name="barcode_detailitem_fragment"><![CDATA[<b>Barcode:</b> %1$s]]></string>
    <string name="barcode_popup"><![CDATA[<b>Barcode:</b> %1$s]]></string>
    <string name="begin_inventur_fragment_home_screen">Choose inventory</string>
    <string name="bez_detailitem_fragment"><![CDATA[<b>Name:</b> %1$s]]></string>
    <string name="cancel_desc_fragment_item_detail">cancel button</string>
    <string name="channel_description">Capentory - Notification Channel</string>
    <string name="check_desc_fragment_item_detail">check button</string>
    <string name="connection_error">A connection error occurred! Check your local server settings!</string>
    <string name="copied_scantext_activity">Copied! %1$s</string>
    <string name="copy_activity_scan_text">Copy</string>
    <string name="copy_message_scanbarcode_activity">Copied: %1$s\nFormat: %2$s</string>
    <string name="current_room_fragment_mergeditems">Current Room: <![CDATA[<b>%1$s</b>]]></string>
    <string name="da_fragment_about">A diploma thesis of</string>
    <string name="decide_later_fragment_item_detail">Decide later</string>
    <string name="desc_fragment_rooms">"Please select a room from the list and enter the room. If you are of the opinion that you already completed your tasks press the red button. "</string>
    <string name="desc_nav_header_main">An easy inventory solution</string>
    <string name="dialog_title_barcode_formats_key_preferences">Choose barcode formats</string>
    <string name="displaydescription_popup"><![CDATA[<b>Description:</b> %1$s]]></string>
    <string name="displayname_popup"><![CDATA[<b>Display Name:</b> %1$s]]></string>
    <string name="done_btn_fragment_rooms">I am finished</string>
    <string name="done_fragment_rooms">Done!</string>
    <string name="dropdown_error_fragment_item_detail">Wrong server-format! Cannot display dropdowns.</string>
    <string name="easy_desc_fragment_home_screen">easy icon</string>
    <string name="easy_fragment_home_screen">Easy</string>
    <string name="found_times_recyclerview_adapter">Found: %1$d/%2$d</string>
    <string name="homescreen_intro">"This app has been developed in the course of our diploma thesis for our engineering school – HTL Rennweg – that is located in Vienna, Austria. We succeeded in simplifying the inventory process of our school and made it tremendously more efficient.  "</string>
    <string name="icons_legal_notice">Icons powered by  <a href="https://icons8.de/">icons8</a>. Usage <a href="https://icons8.com/license">is permitted via linking.</a></string>
    <string name="inventory_finished_fragment_rooms">Started Inventory is already finished!</string>
    <string name="item_not_in_db_merged_item">Item is not in our database!</string>
    <string name="local_logout_fragment_logout">Log out locally</string>
    <string name="login_button_fragment_login">Log in</string>
    <string name="login_text_fragment_login">Please log in!</string>
    <string name="logout_successful_fragment_login">Log out was successful!</string>
    <string name="msg_handle_cancel_fragment_item_detail">This item consists out of multiple physical items. Do you want to mark the remaining %1$d items as missing?</string>
    <string name="msg_notification_fragment_stocktaking">Inventory is still active! Click to get back.</string>
    <string name="msg_server_ip_preferences">Configure IP-Address or Hostname</string>
    <string name="msg_text_filter_mode_preferences">Configure the filter of the text recognition</string>
    <string name="negative_handle_cancel_fragment_item_detail">Return</string>
    <string name="neverending_inventory_stocktaking">Endless-Inventory/%1$s</string>
    <string name="new_item_merged_item">New Item</string>
    <string name="no_items_left_fragment_mergeditems">There aren\'t any items left in this room!</string>
    <string name="no_lightning_camera_source">Flash is not supported!</string>
    <string name="no_room_for_barcode_fragment_rooms">This barcode doesn\'t belong to a room!</string>
    <string name="normal_inventory_stocktaking">Started/%1$s</string>
    <string name="null_dropdown_value_fragment_item_detail">--- No value ---</string>
    <string name="other_room_fragment_item_detail">This item is from another room!</string>
    <string name="perform_inventory_fragment_stocktaking">Perform inventory</string>
    <string name="please_validate_fragment_item_detail">Please validate the item!</string>
    <string name="positive_handle_cancel_fragment_item_detail">Mark</string>
    <string name="progress_fragment_mergeditems">Progress: <![CDATA[<b>%1$s</b>]]></string>
    <string name="recycler_view_adapter_subroom_text">%1$s</string>
    <string name="recycler_view_counter_text_mergeditems">Found: %1$s</string>
    <string name="room_popup"><![CDATA[<b>Room:</b> %1$s]]></string>
    <string name="server_logout_fragment_logout">Logout on Server as well</string>
    <string name="started_inventory_fragment_rooms">Current Inventory: %1$s</string>
    <string name="status_popup">The barcode \"%1$s is unknown to our system. If you think that this is a mistake, please contact a person in charge!</string>
    <string name="text_kown_but_different_room_item_fragment_detailitem">This item is originally from the room \"%1$s\"!</string>
    <string name="text_unkown_item_fragment_detailitem">This item is unknown!</string>
    <string name="title_0_left_finishroom_fragment_mergeditems">Are there any unknown items that you might not have scanned?</string>
    <string name="title_X_left_finishroom_fragment_mergeditems">Are %1$d items missing?</string>
    <string name="title_barcode_formats_key_preferences">Barcode formats</string>
    <string name="title_duplicate_fragment_mergeditems">Duplicate Entry</string>
    <string name="title_handle_cancel_fragment_item_detail">Multiitem</string>
    <string name="title_handle_finish_fragment_rooms">Inventory process</string>
    <string name="title_never_ending_finishroom_fragment_mergeditems">Done with this room?</string>
    <string name="title_notification_fragment_stocktaking">Iventory-Status</string>
    <string name="title_one_left_finishroom_fragment_mergeditems">Is one item missing?</string>
    <string name="title_switch_lightning_preferences">Enforce the flash while using the camera scan</string>
    <string name="unlock_activity_scan_text">Unlock</string>
    <string name="username_fragment_login">Username</string>
    <string name="wait_till_scan_ready_error">Please wait until the scanner is ready!</string>
    <string name="label_textscan_nav_drawer">Text scan</string>
    <string name="label_logout_nav_drawer">Log out</string>
    <string name="label_camerascan_nav_drawer">Camera scan</string>
    <string name="h3_nav_drawer">Additional Information</string>
    <string name="h2_nav_drawer">You are logged in</string>
    <string name="h1_nav_drawer">Utility Functions</string>
    <string name="project_title" translatable="false">Capentory</string>
    <string name="no_items_validated_fragment_validated_mergeditems">No items validated yet!</string>
</resources>