<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/h1_nav_drawer">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/utilBarcodeScan"
                    android:checkable="false"
                    android:icon="@drawable/scan_icon_ios_black"
                    android:menuCategory="secondary"
                    android:title="@string/label_camerascan_nav_drawer" />
                <item
                    android:id="@+id/utilScanText"
                    android:checkable="false"
                    android:icon="@drawable/scan_text_icon_ios_black"
                    android:menuCategory="secondary"
                    android:title="@string/label_textscan_nav_drawer" />

            </group>
        </menu>
    </item>

    <item android:title="@string/h2_nav_drawer">
        <menu>
            <item
                android:id="@+id/loginFragment"
                android:icon="@drawable/ic_account_circle_white_24dp"
                android:menuCategory="secondary"
                android:title="@string/label_logout_nav_drawer" />

        </menu>
    </item>

    <item android:title="@string/h3_nav_drawer">
        <menu>

            <item
                android:id="@+id/aboutFragment"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:menuCategory="secondary"
                android:title="@string/label_about_us_nav_drawer" />
        </menu>
    </item>


</menu>
