<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:paddingTop="5dp"
            android:textAlignment="center"
            android:paddingBottom="20dp"
            android:text="@string/da_fragment_about"
            android:textColor="#000000"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_rennweg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            card_view:cardElevation="1dp">

            <ImageView
                android:id="@+id/rennweg_logo"
                android:layout_width="187dp"
                android:layout_height="187dp"
                android:contentDescription="@string/imgdesc_logo_fragment_about"
                android:padding="20dp"
                app:srcCompat="@drawable/htl_rennweg_logo" />
        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/sep"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="#D8D8D8"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/card_view_rennweg" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:textAlignment="center"
            android:text="@string/sponsor_fragment_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sep" />


        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_zebra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            card_view:cardElevation="1dp">

            <ImageView
                android:id="@+id/zebra_logo"
                android:layout_width="187dp"
                android:layout_height="187dp"
                android:contentDescription="@string/img_desc_zebra_fragment_about"
                android:padding="20dp"
                app:srcCompat="@drawable/zebra_logo" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/icons_legal_notice_fragment_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="20dp"
            android:paddingTop="40dp"
            android:text="@string/icons_legal_notice"
            android:textColor="#727272"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_zebra" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
