<?xml version="1.0" encoding="utf-8"?><?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:fillViewport="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="14dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="14dp"
            android:elevation="2dp"
            android:shape="ring"
            android:thicknessRatio="2"
            app:cardCornerRadius="10dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/exit_popup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="bottom|end"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="#2196F3"
                    app:borderWidth="0dp"
                    app:fabSize="mini"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_cross_white_24dp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/exit_popup">

                    <TextView
                        android:id="@+id/room_popup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/room_popup"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="107dp" />

                    <TextView
                        android:id="@+id/barcode_popup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/barcode_popup"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="107dp" />

                    <TextView
                        android:id="@+id/displayname_popup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/displayname_popup"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="107dp" />

                    <TextView
                        android:id="@+id/displaydescription_popup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/displaydescription_popup"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="107dp" />


                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/ok_popup"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="Ok"
                    android:textColor="#2196F3"
                    android:textSize="15sp"
                    app:cornerRadius="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_max="400dp"
                    app:strokeColor="#2196F3"
                    app:strokeWidth="2dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>